<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jpauwels.orderpizza.MainActivity">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="@+id/txtAddress"
        app:layout_constraintTop_toBottomOf="@+id/lblHeader" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/streetaddress"
        android:inputType="textPostalAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="@+id/txtCity"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="@+id/txtState"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtState"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="@+id/txtZip"
        app:layout_constraintTop_toBottomOf="@+id/txtCity" />

    <EditText
        android:id="@+id/txtZip"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/zip"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="@+id/txtPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtState" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtZip" />

    <TextView
        android:id="@+id/lblHeader"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="185dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/txtFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtFirstName" />

    <ImageView
        android:id="@+id/imgPizza"
        android:layout_width="182dp"
        android:layout_height="112dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        app:srcCompat="@drawable/pizza" />
</android.support.constraint.ConstraintLayout>
