<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jpauwels.orderpizza.Payment">

    <TextView
        android:id="@+id/txtDelivery"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/delivery"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/group1"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDelivery">

        <RadioButton
            android:id="@+id/rdDelYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yesdelradio" />

        <RadioButton
            android:id="@+id/rdDelNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/nodelradio" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtPayMethod"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/paymethod"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group1" />

    <RadioGroup
        android:id="@+id/group2"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPayMethod">

        <RadioButton
            android:id="@+id/rdCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/cashradio" />

        <RadioButton
            android:id="@+id/rdCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/creditradio" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtCash"
        android:layout_width="229dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/cashdesc"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group2" />

    <TextView
        android:id="@+id/txtCSC"
        android:layout_width="173dp"
        android:layout_height="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/cccode"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCCMon" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/imgPizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgPizza"
        android:layout_width="195dp"
        android:layout_height="118dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pizza" />

    <EditText
        android:id="@+id/editCCNum"
        android:layout_width="257dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/ccnum"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group2" />

    <EditText
        android:id="@+id/editCCMon"
        android:layout_width="65dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ccmon"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtExpiration"
        app:layout_constraintTop_toBottomOf="@+id/editCCNum" />

    <EditText
        android:id="@+id/editCCYear"
        android:layout_width="65dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ccyear"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toEndOf="@+id/editCCMon"
        app:layout_constraintTop_toBottomOf="@+id/editCCNum" />

    <TextView
        android:id="@+id/txtExpiration"
        android:layout_width="85dp"
        android:layout_height="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/ccexpiration"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCCNum" />

    <EditText
        android:id="@+id/editCCCSC"
        android:layout_width="65dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="168dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/csc"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCSC"
        app:layout_constraintTop_toBottomOf="@+id/editCCMon" />

    <TextView
        android:id="@+id/txtPayTypeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/paytypeerror"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group2" />

</android.support.constraint.ConstraintLayout>
